force-app/main/default/objects/External_User__c/External_User__c.object-meta.xml
<CustomObject>
    <label>External User</label>
    <nameField>
        <label>External User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>