force-app/main/default/objects/External_User__c/fields/FirstWorkingDate__c.field-meta.xml
<CustomField>
    <fullName>FirstWorkingDate__c</fullName>
    <label>FirstWorkingDate</label>
    <type>Date</type>
</CustomField>