force-app/main/default/objects/External_User__c/fields/HR__c.field-meta.xml
<CustomField>
    <fullName>HR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You want to assign a user which is not HR</errorMessage>
        <filterItems>
            <field>External_User__c.IsHR__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>External_User__c</referenceTo>
    <relationshipLabel>External Users (External User)</relationshipLabel>
    <relationshipName>External_Users1</relationshipName>
    <type>Lookup</type>
</CustomField>