force-app/main/default/objects/External_User__c/fields/IsGoogle__c.field-meta.xml
<CustomField>
    <fullName>IsGoogle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGoogle</label>
    <type>Checkbox</type>
</CustomField>