force-app/main/default/objects/External_User__c/fields/IsHR__c.field-meta.xml
<CustomField>
    <fullName>IsHR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHR</label>
    <type>Checkbox</type>
</CustomField>