force-app/main/default/objects/External_User__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You want to assign user which is not a manager</errorMessage>
        <filterItems>
            <field>External_User__c.IsManager__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>External_User__c</referenceTo>
    <relationshipLabel>External Users</relationshipLabel>
    <relationshipName>External_Users</relationshipName>
    <type>Lookup</type>
</CustomField>