force-app/main/default/objects/External_User__c/fields/Used_Budget__c.field-meta.xml
<CustomField>
    <fullName>Used_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Used Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>