force-app/main/default/objects/External_User__c/fields/Used_Vacations__c.field-meta.xml
<CustomField>
    <fullName>Used_Vacations__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Used Vacations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>